src/strucvars/ingest/snapshots/varfish_server_worker__strucvars__ingest__header__test__build_output_header_38@dragen-sv-min.vcf.snap
---
source: src/strucvars/ingest/header.rs
expression: "std::fs::read_to_string(out_path_str)?"
---
##fileformat=VCFv4.4
##INFO=<ID=IMPRECISE,Number=0,Type=Flag,Description="Imprecise structural variation">
##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the longest variant described in this record">
##INFO=<ID=SVTYPE,Number=1,Type=String,Description="Type of structural variant">
##INFO=<ID=SVLEN,Number=A,Type=Integer,Description="Length of structural variant">
##INFO=<ID=SVCLAIM,Number=A,Type=String,Description="Claim made by the structural variant call. Valid values are D, J, DJ for abundance, adjacency and both respectively">
##INFO=<ID=chr2,Number=1,Type=String,Description="Second chromosome, if not equal to CHROM">
##INFO=<ID=annsv,Number=1,Type=String,Description="Effect annotations: 'Allele | Annotation | Gene_Name | Gene_ID'">
##FILTER=<ID=PASS,Description="All filters passed">
##FORMAT=<ID=GQ,Number=1,Type=Integer,Description="Conditional genotype quality">
##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
##FORMAT=<ID=pec,Number=1,Type=Integer,Description="Total coverage with paired-end reads">
##FORMAT=<ID=pev,Number=1,Type=Integer,Description="Paired-end reads supporting the variant">
##FORMAT=<ID=src,Number=1,Type=Integer,Description="Total coverage with split reads">
##FORMAT=<ID=srv,Number=1,Type=Integer,Description="Split reads supporting the variant">
##FORMAT=<ID=amq,Number=1,Type=Float,Description="Average mapping quality over the variant">
##FORMAT=<ID=cn,Number=1,Type=Integer,Description="Copy number of the variant in the sample">
##FORMAT=<ID=anc,Number=1,Type=Float,Description="Average normalized coverage over the variant in the sample">
##FORMAT=<ID=pc,Number=1,Type=Integer,Description="Point count (windows/targets/probes)">
##ALT=<ID=DEL,Description="Deletion">
##ALT=<ID=DUP,Description="Duplication">
##ALT=<ID=INS,Description="Insertion">
##ALT=<ID=INV,Description="Inversion">
##contig=<ID=chr1,length=248956422,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr2,length=242193529,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr3,length=198295559,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr4,length=190214555,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr5,length=181538259,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr6,length=170805979,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr7,length=159345973,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr8,length=145138636,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr9,length=138394717,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr10,length=133797422,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr11,length=135086622,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr12,length=133275309,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr13,length=114364328,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr14,length=107043718,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr15,length=101991189,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr16,length=90338345,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr17,length=83257441,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr18,length=80373285,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr19,length=58617616,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr20,length=64444167,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr21,length=46709983,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chr22,length=50818468,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chrX,length=156040895,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chrY,length=57227415,assembly="GRCh38",species="Homo sapiens">
##contig=<ID=chrM,length=16569,assembly="GRCh38",species="Homo sapiens">
##fileDate=20230421
##x-varfish-genome-build=GRCh38
##SAMPLE=<ID=SAMPLE,Sex="Male",Disease="Affected">
##PEDIGREE=<ID=SAMPLE>
##x-varfish-case-uuid=d2bad2ec-a75d-44b9-bd0a-83a3f1331b7c
##x-varfish-version=<ID=varfish-server-worker,Version="x.y.z">
##x-varfish-version=<ID=DragenSv,Name="DragenSv",Version="07.021.624.3.10.4">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	SAMPLE

